swagger document updated,changed name of delete routes
